@@ -8897,6 +8897,11 @@ static const struct TrainerMonNoItemDefaultMoves sParty_BrendanLilycoveMudkip[] 
     {
     .iv = 150,
     .lvl = 32,
+    .species = SPECIES_GRUMPIG,
+    },
+    {
+    .iv = 150,
+    .lvl = 32,
     .species = SPECIES_PELIPPER,
     },
     {
@@ -8916,6 +8921,11 @@ static const struct TrainerMonNoItemDefaultMoves sParty_BrendanLilycoveTreecko[]
     .iv = 150,
     .lvl = 32,
     .species = SPECIES_PELIPPER,
+    },
+    {
+    .iv = 150,
+    .lvl = 32,
+    .species = SPECIES_GRUMPIG,
     },
     {
     .iv = 150,
@@ -8943,6 +8953,11 @@ static const struct TrainerMonNoItemDefaultMoves sParty_BrendanLilycoveTorchic[]
     {
     .iv = 150,
     .lvl = 32,
+    .species = SPECIES_GRUMPIG,
+    },
+    {
+    .iv = 150,
+    .lvl = 32,
     .species = SPECIES_SLUGMA,
     },
     {
@@ -8962,6 +8977,11 @@ static const struct TrainerMonNoItemDefaultMoves sParty_MayLilycoveMudkip[] = {
     .iv = 150,
     .lvl = 32,
     .species = SPECIES_SLUGMA,
+    },
+    {
+    .iv = 150,
+    .lvl = 32,
+    .species = SPECIES_GRUMPIG,
     },
     {
     .iv = 150,
@@ -8989,6 +9009,11 @@ static const struct TrainerMonNoItemDefaultMoves sParty_MayLilycoveTreecko[] = {
     {
     .iv = 150,
     .lvl = 32,
+    .species = SPECIES_GRUMPIG,
+    },
+    {
+    .iv = 150,
+    .lvl = 32,
     .species = SPECIES_LUDICOLO,
     },
     {
@@ -9008,6 +9033,11 @@ static const struct TrainerMonNoItemDefaultMoves sParty_MayLilycoveTorchic[] = {
     .iv = 150,
     .lvl = 32,
     .species = SPECIES_LUDICOLO,
+    },
+    {
+    .iv = 150,
+    .lvl = 32,
+    .species = SPECIES_GRUMPIG,
     },
     {
     .iv = 150,
