@@ -37,3 +37,4 @@ Add nicknaming to party menu
 Spread out XP Share
 Add gen 4 style bike
 Scale Mart with badge count
+Buff rivals team to include a Grumpig at Lilycove City battle
